fix spacing in form Grants Detail

--- a/src/themes/default/styles/vars.typography.css
+++ b/src/themes/default/styles/vars.typography.css
@@ -18,6 +18,7 @@ $type-xsmall:   12;
 $type-small:    14;
 $type-base:     $base-font-size;
 $type-medium:   18;
+$type-xmedium:  20;
 $type-large:    22;
 $type-xlarge:   28;
 $type-xxlarge:  33;
